# QubitClient

./: .gitignore  CLAUDE.md  README.en.md  README.md  config.py.example  main.py  pyproject.toml  qubitclient.json.example  requirements.txt  setup.py  skills.sh.json
.github/workflows/: release.yml
demo/: scope_demo.py
docs/: CONFIG_GUIDE.md  OPTPIPULSE.md  SPECTRUM2DNNScope.md  install.md  install_en.md
docs/ctrl/: BASESLOPE.md  DATA.md  DELTA.md  DRAG.md  OPTQUBITREADFREQ.md  OPT_PIPULSE.md  POWERSHIFT.md  QUERY_PARAM.md  RABI.md  RAMSEY.md  RAMSEY_T2.md  RB.md  README.md  S21.md  S21VSFLUX.md  SETPIALPHA.md  SPECTRUM.md  SPECTRUM_2D.md  T1.md  T2.md  TIMINGXYZ.md  UPDATE_PARAM.md
docs/llm/: EXPERIMENT_TYPE.md
docs/nnscope/: POWERSHIFT.md  S21PEAK.md  S21PEAKMULTI.md  S21VFLUX.md  S21VSFLUX.md  SPECTRUM.md  SPECTRUM2D.md
docs/scope/: DELTA.md  DRAG.md  OPTPIPULSE.md  OPTREADFREQ.md  POWERSHIFT.md  RABICOS.md  RAMSEY.md  RB.md  S21PEAK.md  S21PEAKMULTI.md  S21VFLUX.md  S21VSFLUX.md  SINGLESHOT.md  SPECTRUM.md  SPECTRUM2D.md  SPINECHO.md  T12DFIT.md  T1FIT.md  T2FIT.md  XYZ_TIMING.md
docs/ui/: README.md
format_echarts/: format_rabicos.json  format_t1fit.json  fromat_singleshot.json  transformat_ramsey.py  transformat_s21peak.py  transformat_s21vflux.py  transformat_spectrum2dnnscope.py
qubitclient/: __init__.py  __main__.py  cli.py
qubitclient/agent/: __init__.py
qubitclient/config_templates/: mcp.json  qubitclient.json.example
qubitclient/ctrl/: __init__.py  base.py  ctrl.py  mcp_config_loader.py  task.py
qubitclient/draw/: README.md  README_PLT.md  README_PLY.md  dragpltplotter.py  dragplyplotter.py  optpipulsepltplotter.py  optpipulseplyplotter.py  pltmanager.py  pltplotstyle.py  pltplotter.py  plymanager.py  plyplotstyle.py  plyplotter.py  powershiftnnscopepltplotter.py  powershiftnnscopeplyplotter.py  powershiftpltplotter.py  powershiftplyplotter.py  rabicospltplotter.py  rabicosplyplotter.py  ramseypltplotter.py  ramseyplyplotter.py  s21peakpltplotter.py  s21peakplyplotter.py  s21vfluxnnscopepltplotter.py  s21vfluxnnscopeplyplotter.py  s21vfluxscopepltplotter.py  s21vfluxscopeplyplotter.py  singleshotpltplotter.py  singleshotplyplotter.py  spectrum2dnnscopepltplotter.py  spectrum2dnnscopeplyplotter.py  spectrum2dscopepltplotter.py  spectrum2dscopeplyplotter.py  spectrumnnscopepltplotter.py  spectrumnnscopeplyplotter.py  spectrumpltplotter.py  spectrumplyplotter.py  t1fitpltplotter.py  t1fitplyplotter.py  t2fitpltplotter.py  (+1 more)
qubitclient/generate/: __init__.py  generate.py  image_utils.py
qubitclient/llm/: __init__.py  decision.py  experiment.py  experiment_tools.py  llm.py  prompt.py  task.py
qubitclient/nnscope/: nnscope.py  postprocess.py  task.py  task_enum.py
qubitclient/scope/: scope.py  (+3 more)
script/: convert_pkl_to_npy.py  data_name_convert.py  modelscope_download.sh
tests/: test_ctrl_mcp.py  test_llm.py  test_nnscope_powershift.py  test_nnscope_s21vflux.py  test_nnscope_spectrum2dnnscope.py  test_nnscope_spectrumnnscope.py  test_scope.py  test_scope_api.py  test_scope_drag.py  test_scope_opt_pipulse.py  test_scope_powershift.py  test_scope_rabicos.py  test_scope_ramsey.py  test_scope_s21_peak.py  test_scope_s21vflux.py  test_scope_singleshot.py  test_scope_spectrum.py  test_scope_spectrum2dscope.py  test_scope_t1fit.py  test_scope_t2fit.py
(+732 files in other folders)
