[project]
name = "qubitclient"
version = "0.3.1"
description = "qubit analysis client"
authors = [
    { name = "Yaqiang Sun", email = "sunyaking@163.com" },
]
license = {text = "GPL-3.0"}
readme = "README.md"
requires-python = ">=3.10, <=3.14"
dependencies = [
    "attrs>=25.4.0",
    "httpx>=0.28.1",
    "numpy>=1.26.4",
    "requests>=2.32.5",
]

[project.optional-dependencies]
plot = [
    "matplotlib>=3.9",
    "opencv-python>=4.12",
    "opencv-python-headless>=4.12",
    "plotly>=6.4.0",
    "scipy>=1.10",
]
mcp = [
    "langchain-mcp-adapters>=0.2.1",
]
full = [
    "qubitclient[plot,mcp]",
]

[tool.uv]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"

[tool.setuptools.packages.find]
where = ["."]
include = ["qubitclient*"]  # match qubitscope and qubitscope.*
exclude = ["tests", "tests.*", "tmp", "tmp.*"]
