[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qubitclient"
dynamic = ["version"]
description = "qubit analysis client"
authors = [
    { name = "Yaqiang Sun", email = "sunyaking@163.com" },
]
license = {text = "GPL-3.0"}
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "attrs>=25.4.0",
    "httpx>=0.28.1",
    "numpy>=1.26.4",
    "requests>=2.32.5",
    "typer>=0.15.0",
    "rich>=13.0.0",
]
[tool.setuptools.dynamic]
version = {attr = "qubitclient.__version__"}

[project.optional-dependencies]
plot = [
    "matplotlib>=3.9",
    "opencv-python>=4.12",
    "opencv-python-headless>=4.12",
    "plotly>=6.4.0",
    "scipy>=1.10",
]
mcp = [
    "langchain-mcp-adapters>=0.2.1",
]
serve = [
    "modelscope>=1.20.0",
    "modellock>=0.0.1",
]
llm = [
    "openai>=1.58.0",
]
full = [
    "qubitclient[plot,mcp,llm,serve]",
]

[tool.uv]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"

[tool.setuptools.package-data]
qubitclient = ["llm/fewshot/samples/**/*.png", "llm/fewshot/samples/metadata.json", "templates/serve_templates/**/*", "templates/config_templates/**/*"]

[tool.setuptools.packages.find]
where = ["."]
include = ["qubitclient*"]  # match qubitscope and qubitscope.*
exclude = ["tests", "tests.*", "tmp", "tmp.*"]

[project.scripts]
qubitclient = "qubitclient.cli:app"
